[gd_scene load_steps=8 format=3 uid="uid://bw84xoy2evj21"]

[ext_resource type="Script" path="res://Scripts/Compost Body.gd" id="1_u00bv"]
[ext_resource type="Script" path="res://Scripts/Poop_count_label.gd" id="2_3pvoq"]
[ext_resource type="Texture2D" uid="uid://bs1xc1gjmhdrs" path="res://Sprites/Currently Used/Guinea Piggy Bank-Sheet.png" id="2_xhfc1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v58n2"]
radius = 328.0
height = 1232.0

[sub_resource type="Animation" id="Animation_n0qik"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Poop_Symbol:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6m7qg"]
resource_name = "piggy bank"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Poop_Symbol:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpf07"]
_data = {
"RESET": SubResource("Animation_n0qik"),
"piggy bank": SubResource("Animation_6m7qg")
}

[node name="Poop_Count_UI" type="Node2D"]
top_level = true
light_mask = 15
visibility_layer = 31

[node name="Guinea Piggy Bank" type="CharacterBody2D" parent="." groups=["poop_count"]]
position = Vector2(-470, 529)
collision_layer = 31
collision_mask = 8
input_pickable = true
script = ExtResource("1_u00bv")

[node name="Poop_Symbol" type="Sprite2D" parent="Guinea Piggy Bank"]
position = Vector2(462, -529)
scale = Vector2(2.1513, 2.13685)
texture = ExtResource("2_xhfc1")
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guinea Piggy Bank"]
position = Vector2(422, -473)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v58n2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Guinea Piggy Bank"]
libraries = {
"": SubResource("AnimationLibrary_kpf07")
}

[node name="Poop_count_label" type="Label" parent="."]
offset_left = -624.0
offset_top = -1160.0
offset_right = 625.0
offset_bottom = -475.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 200
text = "Poop Count: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
script = ExtResource("2_3pvoq")

[node name="Coming_soon_label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -528.0
offset_top = 472.0
offset_right = 312.0
offset_bottom = 1021.0
scale = Vector2(1.2759, 1.22541)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 200
text = "Coming soon"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="mouse_entered" from="Guinea Piggy Bank" to="Guinea Piggy Bank" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Guinea Piggy Bank" to="Guinea Piggy Bank" method="_on_mouse_exited"]
